@@ -581,6 +581,8 @@ contributors:
 
 * Harshil (harshil21): contributor
 
+* Jérome Perrin (perrinjerome): contributor
+
 * Felix von Drigalski (felixvd): contributor
 
 * Philipp Albrecht (pylbrecht): contributor
